[tool.poetry]
name = "mtk_gateway"
version = "0.1.0"
description = ""
authors = ["Patrick Prasquier <pprasquier@odm-tech.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Local path dependencies
mtk-refusals = { path = "../mtk_refusals", develop = true }
mtk-craft = { path = "../mtk_craft", develop = true }